读配置加了编码